# curiosity-exploration-rl

./: .gitignore  ablation_train.py  baseline_a2c.py  baseline_ppo.py  commands.txt  experiment_runner.py  plan.md  plot_results.py  pyproject.toml  readme.md  requirements.txt  train.py  visualize_agent.py
mace_rl/agents/: a2c.py  ppo.py
mace_rl/envs/: atari_env.py  minigrid_env.py  pybullet_env.py
mace_rl/modules/: __init__.py  curiosity.py  episodic_memory.py  meta_adaptation.py
mace_rl/utils/: beta_schedulers.py  logger.py  reward_system.py  utils.py
