# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mace-rl"
version = "0.1.0"
description = "MACE-RL: Meta-Adaptive Curiosity-Driven Exploration with Episodic Memory"
readme = "readme.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
authors = [
  { name = "Ayush Singh"},
]

# --- Your project's dependencies go here ---
# I've taken these directly from your requirements.txt file.
dependencies = [
    "torch",
    "torchvision",
    "gymnasium",
    "gym",
    "gym-minigrid",
    "pybullet",
    "numpy",
    "matplotlib",
    "seaborn",
    "pandas",
    "scipy",
    "tensorboard",
    "opencv-python",
    "tqdm",
    "minigrid",
    "pybullet_envs_gymnasium",
]

[project.scripts]
# This makes your main script runnable from anywhere in the environment
# For example, your colleague could just type `mace-rl-run` in their terminal.
mace-rl-run = "experiment_runner:main"
mace-rl-visualize = "visualize_agent:main"